--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,7 @@ jobs:
     runs-on: ubuntu-latest 
 
     steps: 
-      - name: Run a one-line script 
-        run: echo Hello, world! 
+      - uses: actions/checkout@v4
       
-      - name: Run a multi-line script 
-        run: | 
-          echo Add other actions to build, 
-          echo test, and deploy your project 
+      - name: Run a one-line script
+        run: echo Hello, world!
