--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,26 @@ name: CI
 on: [ push, pull_request ] 
 
 jobs: 
-  build: 
-    runs-on: ubuntu-latest 
-
+  without_env: 
+    runs-on: ubuntu-latest
+    
     steps: 
-      - uses: actions/checkout@v4
+      - name: Echo MY_FAV_COLOR 
+        run: echo "MY_FAV_COLOR is ${{ vars.MY_FAV_COLOR }}"
       
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Echo Show MY_SECRET
+        run: echo "MY_SECRET is ${{ secrets.MY_SECRET }}" 
+        
+  with_env: 
+    runs-on: ubuntu-latest
+
+    environment: 
+      name: dev 
+      url: https://example.com
+
+    steps:
+      - name: Echo MY_FAV_COLOR
+        run: echo "MY_FAV_COLOR is ${{ vars.MY_FAV_COLOR }}"
+
+      - name: Echo Show MY_SECRET
+        run: echo "MY_SECRET is ${{ secrets.MY_SECRET }}"
